crates/biome_cli/tests/snapshots/main_cases_config_extends/extends_config_rule_fix_options_merge.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test.js
```

## `biome.json`

```json
{
  "extends": ["shared.json"],
  "linter": {
    "enabled": true,
    "rules": {
      "correctness": {
        "noUnusedVariables": {
          "level": "on",
          "fix": "safe"
        }
      }
    }
  }
}
```

## `shared.json`

```json
{
            "linter": {
                "enabled": true,
                "rules": {
                    "correctness": {
                        "noUnusedVariables": {
                            "level": "on",
                            "options": {
                                "ignoreRestSiblings": false
                            }
                        }
                    }
                }
            }
        }
```

## `test.js`

```js
const { a, ...rest } = { a: 1, b: 2}; export { rest }
```

# Emitted Messages

```block
test.js:1:9 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable a is unused.
  
  > 1 │ const { a, ...rest } = { a: 1, b: 2}; export { rest }
      │         ^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i You can enable the ignoreRestSiblings option to ignore unused variables inside destructured objects with rest properties.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 warning.
```
