crates/biome_cli/tests/snapshots/main_cases_config_extends/extends_config_two_levels_deep.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check '<TEMP_DIR>/extends_config_two_levels_deep/sub-project/sub-sub-project/test.js'
```

## `biome.jsonc`

```json
{
  "formatter": {
    "lineWidth": 120
  },
  "linter": {
    "enabled": true,
    "rules": {
      "suspicious": {
        "noDebugger": "error"
      }
    }
  }
}
```

## `sub-project/sub-sub-project/biome.jsonc`

```json
{
  "extends": ["../../biome.jsonc"],
  "root": false
}
```

## `sub-project/sub-sub-project/test.js`

```js
debugger; console.log("string"); 
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
sub-project/sub-sub-project/test.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger; console.log("string");·
      │ ^^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;·console.log("string");·
      │ ----------                       

```

```block
sub-project/sub-sub-project/test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - debugger;·console.log("string");·
      1 │ + debugger;
      2 │ + console.log("string");
      3 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
