crates/biome_cli/tests/snapshots/main_cases_config_extends/extends_multiple_configs_from_biome_manifest.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check test.js
```

## `biome.json`

```json
{
  "extends": ["@shared/config/configs/format", "@shared/config/configs/lint"]
}
```

## `node_modules/@shared/config/biome-manifest.json`

```json
{
    "version": 1,
    "configs": [
        { "format": "./format.json" },
        "shared-config/configs/lint"
    ]
}
```

## `node_modules/@shared/config/format.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `node_modules/@shared/config/package.json`

```json
{
    "name": "@shared/config",
    "exports": { "biome": "./biome-manifest.json" }
}
```

## `node_modules/shared-config/biome-manifest.json`

```json
{
    "version": 1,
    "configs": [{ "lint": "./lint.json" }]
}
```

## `node_modules/shared-config/lint.json`

```json
{ "linter": { "rules": { "suspicious": { "noDebugger": "error" } } } }
```

## `node_modules/shared-config/package.json`

```json
{
    "name": "shared-config",
    "exports": { "biome": "./biome-manifest.json" }
}
```

## `test.js`

```js
debugger; console.log("string");
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger; console.log("string");
      │ ^^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;·console.log("string");
      │ ----------                      

```

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - debugger;·console.log("string");
      1 │ + debugger;
      2 │ + console.log('string');
      3 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
